# android-mcp-server

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAKEFILE.md  MCP_Tools_Reference.md  Makefile  README.md  bandit-report.json  main.py  pyproject.toml  pytest.ini
docs/: api-reference.md  architecture.md
mcp/: __init__.py  types.py
pydantic/: __init__.py
scripts/: android-mcp-server
src/: __init__.py  adb_manager.py  config.py  decorators.py  device_protocol.py  element_finder.py  error_handler.py  feedback_system.py  initialization.py  log_monitor.py  media_capture.py  path_safety.py  registry.py  screen_interactor.py  server.py  timeout.py  tool_models.py  ui_inspector.py  ui_models.py  ui_parser.py  ui_retriever.py  validation.py
test_scripts/: run_tests.py  test_basic_tool.py  test_find_elements.py  test_find_elements_simple.py  test_find_specific.py  test_list_tools.py  test_logcat.py  test_logcat_mcp.py  test_logcat_simple.py  test_simple_mcp.py  test_tap_element_update.py  test_timeout.py
tests/: README.md  conftest.py  test_adb_manager.py  test_adb_manager_extended.py  test_coverage_gaps.py  test_decorators.py  test_element_finder_unit.py  test_error_handler.py  test_error_handler_extra.py  test_feedback_system_extended.py  test_initialization_registry.py  test_integration.py  test_log_monitor_extended.py  test_log_monitor_unit.py  test_media_capture_extended.py  test_media_capture_unit.py  test_screen_interactor_extended.py  test_screen_interactor_unit.py  test_security_paths.py  test_server.py  test_timeout_extra.py  test_timeout_helpers.py  (+8 more)
(+16 files in other folders)
