[project]
name = "android-mcp-server"
version = "0.1.0"
description = "Android MCP server for device automation via ADB"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
android-mcp-server = "src.server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.0",
]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"src" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = false
exclude = [
    "tests",
    "test_scripts",
]

[[tool.mypy.overrides]]
module = [
  "src.server",
]
ignore_errors = true
